--- a/ad.html
+++ b/ad.html
@@ -22,6 +22,7 @@ html{
 	background-color: #f05a5a;
 	background-color: #de3a45;
 	background-color: #df3e48;
+	background-color: #000000;
 	color: white;
 	color: #f2f2f2;
 	color: #ddd1c0;
@@ -68,6 +69,7 @@ p{
 	color: #1f4060;
 	color: #19334a;
 	color: #272240;
+	color: #df3e48;
 }
 #title{
 	font-size: 1.4em;
