--- a/ad.html
+++ b/ad.html
@@ -109,7 +109,7 @@ p{
 		<span id="linux" class="colored one">Linux</span>
 		<div class="distro one colored">
 			RedHat/CentOS Fedora
-			Debian Ubuntu SUSE
+			Debian Ubuntu SUSE...
 		</div>
 		<span id="support" class="colored zh one">支持与培训</span>
 		<!-- <p id="wel" class="zh">欢迎来电垂询</p> -->
