--- a/pay/repass.html
+++ b/pay/repass.html
@@ -3,28 +3,34 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title></title>
+<title>修改密码 - 张三丰</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="i.css">
 </head>
 <body>
-	<form class="form-inline">
-  <div class="form-group">
-    <label for="inputPassword6">原密码</label>
-    <input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
-  </div>
-  <div class="form-group">
-    <label for="inputPassword6">新密码</label>
-    <input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
-    <small id="passwordHelpInline" class="text-muted">
-      Must be 8-20 characters long.
-    </small>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword6">新密码确认</label>
-    <input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
-  </div>
-  <button type="submit" class="btn btn-primary">修 改</button>
-</form>
+	<form>
+		<div class="form-group">
+			<label for="pass">原密码</label>
+			<input type="password" class="form-control" id="pass" >
+		</div>
+		<div class="form-group">
+			<label for="newpass1">新密码</label>
+			<input type="password" class="form-control" id="newpass1">
+			<small id="passwordHelpInline" class="text-muted">
+				最少6位
+			</small>
+		</div>
+		<div class="form-group">
+			<label for="newpass2">新密码确认</label>
+			<input type="password" class="form-control" id="newpass2">
+		</div>
+		<div class="chpw">
+		<button type="submit" class="btn btn-primary">修 改</button>
+		</div>
+		<div>
+		<a href="index.html"class="btn btn-secondary">取 消</a>
+		</div>
+	</form>
 
 	<script src=""></script>
 	<noscript></noscript>
