--- a/pay/signin.html
+++ b/pay/signin.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title></title>
+<title>登 陆</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="">
+<link rel="stylesheet" type="text/css" href="i.css">
 </head>
 <body>
 	<form>
 		<div class="form-group">
-			<label for="account">账号</label>
+			<label for="account">账 号</label>
 			<input type="text" class="form-control" id="account" placeholder="123456" value="123456">
 			<small class="form-text text-muted">身份证号后6位</small>
 		</div>
 		<div class="form-group">
-			<label for="passwd">密码</label>
+			<label for="passwd">密 码</label>
 			<input type="password" class="form-control" id="passwd" placeholder="123456" value="123456">
 		</div>
 		<div class="form-check">
