--- a/ad.html
+++ b/ad.html
@@ -105,7 +105,7 @@ p{
 	</div>
 
 	<div class="work">
-		<p id="dev" class="zh">网站、公众号、小程序开发</p>
+		<p id="dev" class="zh">网站、APP、公众号、小程序开发</p>
 		<span id="linux" class="colored one">Linux</span>
 		<div class="distro one colored">
 			RedHat/CentOS Fedora
