--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -4,23 +4,171 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="">
+<meta name="author" content="">
+<meta name="keyword" content="">
 <title></title>
-<style>
-iframe{
-	border:0;
-	height:1920px;
-	width:100%;
-}
-</style>
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" type="text/css" media="" href="css/bootstrap.min.css">
+<!--external css-->
+<link rel="stylesheet" type="text/css" media="" href="">
+<!-- Custom styles for this template -->
+<link rel="stylesheet" type="text/css" media="" href="">
+<link rel="icon">
 </head>
-<body>
-<iframe src="http://bm.jxjxedu.net"></iframe>
-	<script>
-	window.addEventListener('message', function(event){
-		console.log(event.data);
-		location.pathname=event.data;
-	});
-	</script>
+<body class="bg-light">
+
+	<nav class="navbar bg-dark">
+		<a class="text-light navbar-brand" href="#"><h2><strong>XX省成人高考网上报名系统</strong></h2></a>
+	</nav>
+	
+
+	<section class="container-fluid">
+	<div class="row">
+		<aside class="col-md-auto bg-light px-4 pt-3">
+			<ul class="nav flex-column nav-pills">
+				<li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-allergies"></i> 网上报名</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-book"></i> 招生计划</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-phone"></i> 联系电话</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-clipboard-list"></i> 计划说明</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-check"></i> 报名条件</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-boxes"></i> 考试相关</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-certificate"></i> 考试科目</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-clock"></i> 考试时间</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-copy"></i> 录取政策</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-address-book"></i> 新生复查</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-bell"></i> 考试须知</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-question"></i> 录取分数</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-flag"></i> 特别提示</a></li>
+			</ul>
+		</aside>
+
+		<main class="col-md pl-0">
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th class="" scope="col" colspan="4"><h4><strong>网上报名</strong></h4></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row" colspan="4"><i class="fas fa-arrow-alt-circle-right"></i> 考生状态</th>
+				</tr>
+				<tr>
+					<th scope="row">注意事项</th>
+					<td scope="row" colspan="3">打*号项必须填写  报名序号作为用户登录名，登录密码作为登录系统密码，点击"立即报名"后，请支付报名费用</th>
+				</tr>
+				<tr>
+					<th scope="row" colspan="4"><i class="fas fa-arrow-alt-circle-right"></i> 基本信息</th>
+				</tr>
+				<tr>
+					<th scope="row">报名序号</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">考生号</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">姓 名</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">性 别</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">出生日期</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">身份证</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">民族</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">政治面貌</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">毕业日期</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">毕业院校</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">手机号码</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">电子邮箱</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">参加工作日期</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">工作单位</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">邮寄地址</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">当前学历</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">微 信</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">QQ</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">登陆密码</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">密码确认</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row" colspan="4"><i class="fas fa-arrow-alt-circle-right"></i> 报考信息</th>
+				</tr>
+				<tr>
+					<th scope="row">报考层次</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">学 制</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">报考学校</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row">学习形式</th>
+					<td><input class="form-control" type="text"></td>
+				</tr>
+				<tr>
+					<th scope="row">报考专业</th>
+					<td><input class="form-control" type="text"></td>
+					<th scope="row"></th>
+					<td></td>
+				</tr>
+				<tr>
+					<td colspan="4"><button class="btn btn-success">立即报名</button></td>
+				</tr>
+			</tbody>
+		</table>
+		</main>
+	</div>
+	</section>
+
+	<footer>
+	</footer>
+
+	<!-- js placed at the end of the document so the pages load faster -->
+	<script src=""></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+
+	<!--common script for all pages-->
+	<script src=""></script>
+
+	<!--script for this page-->
+	<script src=""></script>
+
 	<noscript></noscript>
 </body>
 </html>
+
+<!--
+	vim:ft=html
+-->
+
