use div instead of table

--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -11,7 +11,7 @@
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" type="text/css" media="" href="css/bootstrap.min.css">
 <!--external css-->
-<link rel="stylesheet" type="text/css" media="" href="">
+<link rel="stylesheet" type="text/css" media="" href="css/dot.css">
 <!-- Custom styles for this template -->
 <link rel="stylesheet" type="text/css" media="" href="">
 <link rel="icon">
@@ -43,110 +43,194 @@
 			</ul>
 		</aside>
 
-		<main class="col-md pl-0">
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th class="" scope="col" colspan="4"><h4><strong>网上报名</strong></h4></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<th scope="row" colspan="4"><i class="fas fa-arrow-alt-circle-right"></i> 考生状态</th>
-				</tr>
-				<tr>
-					<th scope="row">注意事项</th>
-					<td scope="row" colspan="3">打*号项必须填写  报名序号作为用户登录名，登录密码作为登录系统密码，点击"立即报名"后，请支付报名费用</th>
-				</tr>
-				<tr>
-					<th scope="row" colspan="4"><i class="fas fa-arrow-alt-circle-right"></i> 基本信息</th>
-				</tr>
-				<tr>
-					<th scope="row">报名序号</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">考生号</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">姓 名</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">性 别</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">出生日期</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">身份证</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">民族</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">政治面貌</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">毕业日期</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">毕业院校</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">手机号码</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">电子邮箱</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">参加工作日期</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">工作单位</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">邮寄地址</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">当前学历</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">微 信</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">QQ</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">登陆密码</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">密码确认</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row" colspan="4"><i class="fas fa-arrow-alt-circle-right"></i> 报考信息</th>
-				</tr>
-				<tr>
-					<th scope="row">报考层次</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">学 制</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">报考学校</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row">学习形式</th>
-					<td><input class="form-control" type="text"></td>
-				</tr>
-				<tr>
-					<th scope="row">报考专业</th>
-					<td><input class="form-control" type="text"></td>
-					<th scope="row"></th>
-					<td></td>
-				</tr>
-				<tr>
-					<td colspan="4"><button class="btn btn-success">立即报名</button></td>
-				</tr>
-			</tbody>
-		</table>
+		<main class="col-md pt-3">
+				<div>
+					<h4><strong>网上报名</strong></h4>
+				</div>
+				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 考生状态</div>
+				<div class="row">
+					<div class="col-md-auto border">注意事项</div>
+					<div class="col-md-auto border">打*号项必须填写  报名序号作为用户登录名，登录密码作为登录系统密码，点击"立即报名"后，请支付报名费用</div>
+				</div>
+				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 基本信息</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">报名序号</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">考生号</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">姓 名</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">性 别</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">出生日期</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">身份证</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">民族</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">政治面貌</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">毕业日期</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">毕业院校</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">手机号码</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">电子邮箱</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">参加工作日期</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">工作单位</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">邮寄地址</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">当前学历</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">微 信</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">QQ</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">登陆密码</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">密码确认</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 报考信息</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">报考层次</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">学 制</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">报考学校</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">学习形式</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-auto d-flex align-items-center border px-0">
+						<div class="p-3 thead">报考专业</div>
+						<div class="p-3 border-left">
+							<input class="form-control" type="text">
+						</div>
+					</div>
+				</div>
+				<div><button class="btn btn-success">立即报名</button></div>
 		</main>
 	</div>
 	</section>
