--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -19,13 +19,13 @@
 <body class="bg-light">
 
 	<nav class="navbar bg-dark">
-		<a class="text-light navbar-brand" href="#"><h2><strong>XX省成人高考网上报名系统</strong></h2></a>
+		<a class="text-light" href="#"><h2><strong>XX省成人高考网上报名系统</strong></h2></a>
 	</nav>
 	
 
 	<section class="container-fluid">
 	<div class="row">
-		<aside class="col-md-auto bg-light px-4 pt-3">
+		<aside class="col-md-auto bg-light px-4 pt-3 d-none d-md-block">
 			<ul class="nav flex-column nav-pills">
 				<li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-allergies"></i> 网上报名</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-book"></i> 招生计划</a></li>
@@ -49,7 +49,7 @@
 				</div>
 				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 考生状态</div>
 				<div class="row">
-					<div class="col-md-auto border">注意事项</div>
+					<div class="col-md-auto border thead">注意事项</div>
 					<div class="col-md-auto border">打*号项必须填写  报名序号作为用户登录名，登录密码作为登录系统密码，点击"立即报名"后，请支付报名费用</div>
 				</div>
 				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 基本信息</div>
