--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -49,8 +49,8 @@
 				</div>
 				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 考生状态</div>
 				<div class="row">
-					<div class="col-md-auto border thead">注意事项</div>
-					<div class="col-md-auto border">打*号项必须填写  报名序号作为用户登录名，登录密码作为登录系统密码，点击"立即报名"后，请支付报名费用</div>
+					<div class="col-auto border thead">注意事项</div>
+					<div class="col border">打*号项必须填写  报名序号作为用户登录名，登录密码作为登录系统密码，点击"立即报名"后，请支付报名费用</div>
 				</div>
 				<div class=""><i class="fas fa-arrow-alt-circle-right"></i> 基本信息</div>
 				<div class="row">
