--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -20,13 +20,16 @@
 
 	<nav class="navbar bg-dark">
 		<a class="text-light" href="#"><h2><strong>XX省成人高考网上报名系统</strong></h2></a>
+		<div class="position-absolute d-md-none text-light" id="bars">
+			<i class="fas fa-bars fa-lg"></i>
+		</div>
 	</nav>
 	
 
 	<section class="container-fluid">
 	<div class="row">
-		<aside class="col-md-auto bg-light px-4 pt-3 d-none d-md-block">
-			<ul class="nav flex-column nav-pills">
+		<aside class="col-md-auto bg-light px-4 pt-3" id="sidebar">
+			<ul class="nav flex-column nav-pills d-none d-md-block text-center" id="navul">
 				<li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-allergies"></i> 网上报名</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-book"></i> 招生计划</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-phone"></i> 联系电话</a></li>
@@ -243,7 +246,7 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 
 	<!--common script for all pages-->
-	<script src=""></script>
+	<script src="js/dot.js"></script>
 
 	<!--script for this page-->
 	<script src=""></script>
