--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -233,7 +233,7 @@
 						</div>
 					</div>
 				</div>
-				<div><button class="btn btn-success">立即报名</button></div>
+				<div><button class="btn btn-success my-3">立即报名</button></div>
 		</main>
 	</div>
 	</section>
