--- a/demo/gk/index.html
+++ b/demo/gk/index.html
@@ -30,9 +30,10 @@
 	<div class="row">
 		<aside class="col-md-auto bg-light px-4 pt-3" id="sidebar">
 			<ul class="nav flex-column nav-pills d-none d-md-block text-center" id="navul">
-				<li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-allergies"></i> 网上报名</a></li>
-				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-book"></i> 招生计划</a></li>
-				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-phone"></i> 联系电话</a></li>
+				<li class="nav-item"><a class="nav-link active" href="index.html"><i class="fas fa-allergies"></i> 网上报名</a></li>
+				<li class="nav-item"><a class="nav-link" href="plan.html"><i class="fas fa-book"></i> 招生计划</a></li>
+				<li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-phone"></i> 联系电话</a></li>
+				<li class="nav-item"><a class="nav-link" href="login.html"><i class="fas fa-phone"></i> 考生入口</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-clipboard-list"></i> 计划说明</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-check"></i> 报名条件</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-boxes"></i> 考试相关</a></li>
