--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -16,6 +16,9 @@
 	<section>
 		<span class="display-1 text-danger">55</span>
 	</section>
+	<section>
+		<span class="h5 text-warning">12:15</span>
+	</section>
 
 	<script src="js/mustache.min.js"></script>
 	<script src="js/z.js"></script>
