--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -11,14 +11,20 @@
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" type="text/css" media="" href="css/bootstrap.min.css">
 </head>
-<body class="container h-100 d-flex align-items-center justify-content-center">
+<body class="h-100 d-flex align-items-center justify-content-center">
 
-	<section>
-		<span class="display-1 text-danger">55</span>
-	</section>
-	<section>
-		<span class="h5 text-warning">12:15</span>
-	</section>
+	<div class="container">
+		<div class="row">
+			<section id="num" class="col text-center">
+				<span class="display-1 text-danger">55</span>
+			</section>
+		</div>
+		<div class="row">
+			<section id="time" class="col text-center">
+				<span class="h5 text-warning">12:15:55</span>
+			</section>
+		</div>
+	</div>
 
 	<script src="js/mustache.min.js"></script>
 	<script src="js/z.js"></script>
