--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="row">
 			<section id="time" class="col text-center">
-				<span class="h5 text-warning">12:15:55</span>
+				<span class="h5 text-danger">12:15:55</span>
 			</section>
 		</div>
 	</div>
