--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -13,15 +13,15 @@
 </head>
 <body class="h-100 d-flex align-items-center justify-content-center">
 
-	<div class="container">
+	<div id="main" class="container">
 		<div class="row">
-			<section id="num" class="col text-center">
-				<span class="display-1 text-danger">55</span>
+			<section class="col text-center">
+				<span id="num" class="display-1 text-danger">000</span>
 			</section>
 		</div>
 		<div class="row">
-			<section id="time" class="col text-center">
-				<span class="h5 text-danger">12:15:55</span>
+			<section class="col text-center">
+				<span id="time" class="h5 text-danger">17:03:55</span>
 			</section>
 		</div>
 	</div>
