--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -10,10 +10,11 @@
 <title>HXMY</title>
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" type="text/css" media="" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" media="" href="css/z.css">
 </head>
 <body class="h-100 d-flex align-items-center justify-content-center">
 
-	<div id="main" class="container">
+	<div class="container">
 		<div class="row">
 			<section class="col text-center">
 				<span id="num" class="display-1 text-danger">000</span>
@@ -22,6 +23,13 @@
 		<div class="row">
 			<section class="col text-center">
 				<span id="time" class="h5 text-danger">00:00:00</span>
+			</section>
+		</div>
+		<div class="row">
+			<section class="col text-center">
+			<div class="spinner-grow text-warning" role="status">
+				<span class="sr-only">Loading...</span>
+			</div>
 			</section>
 		</div>
 	</div>
