--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -28,7 +28,7 @@
 		<div class="row">
 			<section class="col text-center">
 			<div class="spinner-grow text-warning" role="status">
-				<span class="sr-only">Loading...</span>
+				<span class="sr-only">10s...</span>
 			</div>
 			</section>
 		</div>
