--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -22,12 +22,12 @@
 		</div>
 		<div class="row">
 			<section class="col text-center">
-				<span id="time" class="h5 text-danger">00:00:00</span>
+				<span id="time" class="h5 text-warning">00:00:00</span>
 			</section>
 		</div>
 		<div class="row">
 			<section class="col text-center">
-			<div class="spinner-grow text-warning" role="status">
+			<div class="spinner-grow text-danger" role="status">
 				<span class="sr-only">10s...</span>
 			</div>
 			</section>
