--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -15,9 +15,14 @@
 <body class="h-100 d-flex align-items-center justify-content-center">
 
 	<div class="container">
+		<div id="rsv_row" class="row">
+			<section class="col text-center">
+				<span id="rsv" class="display-4 text-danger">000</span>
+			</section>
+		</div>
 		<div class="row">
 			<section class="col text-center">
-				<span id="num" class="display-1 text-danger">000</span>
+				<span id="oc" class="display-1 text-danger">000</span>
 			</section>
 		</div>
 		<div class="row">
