--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -15,7 +15,7 @@
 <body class="h-100 d-flex align-items-center justify-content-center">
 
 	<div class="container">
-		<div id="rsv_row" class="row">
+		<div class="row">
 			<section class="col text-center">
 				<span id="rsv" class="display-4 text-danger">000</span>
 			</section>
@@ -25,14 +25,16 @@
 				<span id="oc" class="display-1 text-danger">000</span>
 			</section>
 		</div>
+		<!--
 		<div class="row">
 			<section class="col text-center">
 				<span id="time" class="h5 text-warning">00:00:00</span>
 			</section>
 		</div>
+		-->
 		<div class="row">
 			<section class="col text-center">
-			<div class="spinner-grow text-danger" role="status">
+			<div class="spinner-grow text-warning" role="status">
 				<span class="sr-only">10s...</span>
 			</div>
 			</section>
