--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -15,7 +15,7 @@
 <body class="h-100 d-flex align-items-center justify-content-center">
 
 	<div class="container">
-		<div class="row">
+		<div id="rsv_row" class="row">
 			<section class="col text-center">
 				<span id="rsv" class="display-4 text-danger">000</span>
 			</section>
