--- a/hxmy/index.html
+++ b/hxmy/index.html
@@ -25,16 +25,9 @@
 				<span id="oc" class="display-1 text-danger">000</span>
 			</section>
 		</div>
-		<!--
 		<div class="row">
 			<section class="col text-center">
-				<span id="time" class="h5 text-warning">00:00:00</span>
-			</section>
-		</div>
-		-->
-		<div class="row">
-			<section class="col text-center">
-			<div class="spinner-grow text-warning" role="status">
+			<div id="spinner" class="spinner-grow text-warning" role="status">
 				<span class="sr-only">10s...</span>
 			</div>
 			</section>
